topbar spacing matches button spacing, index body fixed

--- a/css/topbar.css
+++ b/css/topbar.css
@@ -1,8 +1,8 @@
 .top-bar {
 	background-color: black;
 	width: 100%;
-	height: 60px;
-	line-height: 60px;
+	height: 70px;
+	line-height: 70px;
 	-webkit-font-smoothing: antialiased;
 }
 
